# dwork

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  TODO  build.sh  build_deps.sh
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  libdwork.rst  messaging.rst
example/: run.sh
include/: TaskMsg.pb.h  dag.hh  dag_thread.h  dwork.hh.in  event.hh  proto.hh  qredis.hh  taskDB.hh  taskHeap.hh
proto/: CMakeLists.txt  Makefile  TaskMsg.pb.cc  TaskMsg.pb.h  TaskMsg.proto
src/: Makefile  TODO  conf.mk  dag.cc  dhub.cc  dquery.cc  hub.cc  hub.cpp  local_db.cc  manager.cc  manager.cpp  proto.cc  proto.hpp  qredis.cc  qredis.cpp  qredis.hpp  server.cpp  taskDB.cc  taskHeap.cc  topol.cc
src/proto/: TaskMsg.pb.cc  TaskMsg.pb.h  TaskMsg.proto  writer.cpp
tests/: CMakeLists.txt  dtest.cc  enque.sh  gen_tasks.py  kernel.cc  kworker.cc  proto_reader.cc  proto_writer.cc  qredis.cc  rtest.cc  stencil.cc  taskDB.cc  taskHeap.cc  test.h  test_kernel.cc
